fix: increase margin-bottom in fetch class for improved spacing

--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -17,7 +17,7 @@
 
 .fetch {
   text-align: center;
-  margin-bottom: 100%;
+  margin-bottom: 150%;
 }
 
 @media (max-width: 400px) {
